# Space/venus/docs/swagger.json
@@ -12,6 +12,38 @@
     },
     "basePath": "/api",
     "paths": {
+        "/admin/calendar": {
+            "get": {
+                "description": "Get calendar from database",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Calendar"
+                ],
+                "summary": "Get calendar",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "start date",
+                        "name": "date",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/domain.GetCalendarResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/admin/order": {
             "get": {
                 "description": "get order ID by ID",
@@ -58,7 +90,7 @@
                 "parameters": [
                     {
                         "description": "place here order ID",
-                        "name": "rquestBody",
+                        "name": "requestBody",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -364,6 +396,46 @@
                 }
             }
         },
+        "domain.GetCalendarResponse": {
+            "type": "object",
+            "properties": {
+                "current": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/domain.GetCalendarTicket"
+                    }
+                },
+                "error": {
+                    "type": "string",
+                    "example": "Pasha sasat"
+                },
+                "next": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/domain.GetCalendarTicket"
+                    }
+                }
+            }
+        },
+        "domain.GetCalendarTicket": {
+            "type": "object",
+            "properties": {
+                "day": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "times": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    },
+                    "example": [
+                        "['10:30'",
+                        " '16:30']"
+                    ]
+                }
+            }
+        },
         "domain.GetOrderByIdResponse": {
             "type": "object",
             "properties": {
@@ -430,7 +502,7 @@
         "domain.GetUserByIdResponse": {
             "type": "object",
             "properties": {
-                "call": {
+                "calls": {
                     "type": "array",
                     "items": {
                         "type": "string"
@@ -447,7 +519,7 @@
                     "type": "integer",
                     "example": 1
                 },
-                "username": {
+                "userName": {
                     "type": "string",
                     "example": "OLEG"
                 }
@@ -536,7 +608,7 @@
                     "type": "string",
                     "example": "2023-01-02T10:30:00Z"
                 },
-                "username": {
+                "userName": {
                     "type": "string",
                     "example": "OLEG"
                 }
@@ -585,7 +657,7 @@
         "domain.PostUserRequest": {
             "type": "object",
             "properties": {
-                "calls": {
+                "call": {
                     "type": "string",
                     "example": "vk:nah"
                 },
@@ -597,7 +669,7 @@
                     "type": "integer",
                     "example": 1
                 },
-                "username": {
+                "userName": {
                     "type": "string",
                     "example": "OLEG"
                 }
