# Space/venus/internal/gin/api/api_controller.go
@@ -23,6 +23,7 @@ func CreateApiGroups(g *gin.Engine, dbController db_services.DbController) {
 		//Order
 		adminGroup.GET("/order", func(c *gin.Context) { controller.GetOrderById(c, dbController) })
 		adminGroup.POST("/order", func(c *gin.Context) { controller.PostOrder(c, dbController) })
+		adminGroup.GET("/calendar", func(c *gin.Context) { controller.GetCalendar(c, dbController) })
 		//Sevices
 		adminGroup.GET("/services", func(c *gin.Context) { controller.GetServicesById(c, dbController) })
 		adminGroup.POST("/services", func(c *gin.Context) { controller.PostServices(c, dbController) })
